[SR-656] When invoking `swiftc -v`, link with `-v`